# AgenticNewsCurator

./: .env.example  README.md  pyproject.toml
news/: 2025-02-23_01-23-19_report.md
src/agenticnewscurator/: crew.py  main.py
src/agenticnewscurator/config/: agents.yaml  tasks.yaml
